--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#
+export.ttl
+
 # Logs
 logs
 *.log
@@ -25,6 +28,7 @@ coverage
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
+dist
 
 # Dependency directories
 node_modules
@@ -35,3 +39,16 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# IDE
+.vscode
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
